manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sandbox.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sandbox-app
                port:
                  number: 80
